force-app/main/default/objects/Vehicle/fields/Auto_Recall_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Auto_Recall_Indicator__c</fullName>
    <formula>IF( ActiveRecallCount &gt;0,
IMAGE(&apos;/resource/Auto_Warranty_Icons/approachingEnd.png&apos;, &apos;Warranty Ending&apos;,30,30),
IMAGE(&apos;/resource/Auto_Warranty_Icons/inWarranty.png&apos;, &apos;No Recalls&apos;,30,30)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recall Indicator</label>
    <type>Text</type>
</CustomField>