force-app/main/default/objects/Vehicle/fields/Auto_Vehicle_Image__c.field-meta.xml
<CustomField>
    <fullName>Auto_Vehicle_Image__c</fullName>
    <formula>IMAGE(VehicleDefinition.Product.purl__c, &quot;No Image&quot;, 50, 50 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Image</label>
    <type>Text</type>
</CustomField>