force-app/main/default/objects/Vehicle/fields/Auto_Warranty_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Auto_Warranty_Indicator__c</fullName>
    <formula>CASE(Auto_Warranty_Status__c,
&apos;In Warranty&apos;, IMAGE(&apos;/resource/Auto_Warranty_Icons/inWarranty.png?&apos;, &apos;Yes&apos;,30,30),
&apos;Out of Warranty&apos;, IMAGE(&apos;/resource/Auto_Warranty_Icons/expired.png?&apos;, &apos;No&apos;,30,30),
&apos;Approaching End of Warranty&apos;, IMAGE(&apos;/resource/Auto_Warranty_Icons/approachingEnd.png?&apos;, &apos;Warranty Ending&apos;,30,30),
IMAGE(&apos;/resource/Auto_Warranty_Icons/unknownWarranty.png?&apos;, &apos;Warranty Unknown&apos;,30,30)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Indicator</label>
    <type>Text</type>
</CustomField>