force-app/main/default/objects/Vehicle/fields/Auto_Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Warranty_Status__c</fullName>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Warranty</fullName>
            </value>
            <value>
                <fullName>Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Approaching End of Warranty</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>