force-app/main/default/objects/Vehicle/fields/Is_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Drive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Test Drive Vehicle</label>
    <type>Checkbox</type>
</CustomField>