force-app/main/default/objects/Vehicle/fields/Vehicle_Picture_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Picture_URL_2__c</fullName>
    <label>Vehicle_Picture_URL_2</label>
    <type>Url</type>
</CustomField>