force-app/main/default/objects/Vehicle/fields/Vehicle_Picture_URL_4__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Picture_URL_4__c</fullName>
    <label>Vehicle_Picture_URL_4</label>
    <type>Url</type>
</CustomField>