force-app/main/default/objects/Vehicle/listViews/Golden_Records.listView-meta.xml
<ListView>
    <fullName>Golden_Records</fullName>
    <columns>Name</columns>
    <columns>VehicleIdentificationNumber</columns>
    <columns>ChassisNumber</columns>
    <columns>CurrentOwner</columns>
    <columns>Status</columns>
    <columns>LastOdometerReading</columns>
    <columns>OdometerReadingUom</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AutoIDO_Golden_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Golden Records</label>
</ListView>