force-app/main/default/objects/Vehicle/listViews/My_Vehicles.listView-meta.xml
<ListView>
    <fullName>My_Vehicles</fullName>
    <columns>Name</columns>
    <columns>VehicleIdentificationNumber</columns>
    <columns>ChassisNumber</columns>
    <columns>CurrentOwner</columns>
    <columns>Status</columns>
    <columns>LastOdometerReading</columns>
    <columns>OdometerReadingUom</columns>
    <filterScope>Mine</filterScope>
    <label>🚘 All - Veicoli</label>
</ListView>